--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
-import Hero from "../components/hero.astro"
+import Hero from "../components/Hero.astro"
 import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout>
-	<Hero/>
+	<Hero pretitle="Welcome To" title="GreenLeague" subtitle="Helping the world be a better place\none step at a time" imgurl="/hero.png"/>
 </Layout>
